<resources>
    <string name="app_name">proyectoNativas</string>
    <string name="nombre">Brayan Cuervo</string>
    <string name="NombreAplicacion">Moovit2</string>
    <string name="textoHome">Inicia una nueva aventura con Moovit2 y descubre una nueva forma de ver el mundo</string>
    <string name="BotonHome">Comienza</string>
    <string name="textoRegistrate">Registrate</string>
    <string name="recupera_contraseña_login">Recupera Tu Contraseña</string>
    <string name="google_login">Ingresa con Google</string>
    <string name="texto_login">La aventura está por iniciar, porfavor inicia sesión</string>
    <string name="btn_login">Ingresar</string>
    <string name="no_tienes_cuenta_home">No tienes cuenta?</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="texto_registro">Crea tu cuenta para comenzar</string>
    <string name="terminos_registro">Acepto los términos y condiciones</string>
    <string name="btn_registro">Registrarse</string>
    <string name="ya_tienes_cuenta_registro">¿Ya tienes cuenta?</string>
    <string name="inicia_sesion_registro">Inicia sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="productos">Productos</string>
    <string name="perfil">Perfil\n</string>
    <string name="ajustes">Ajustes</string>
    <string name="TuPerfil">Este es tu perfil :)\n</string>
    <string name="navigation_drawer_open">menu abierto</string>
    <string name="navigation_drawer_close">menu cerrado\n</string>
    <string name="admin">Admin</string>
    <string name="favoritos">Favoritos</string>
    <string name="usuarios">Usuarios</string>
    <string name="carrito">CARRITO</string>
    <string name="catalogo">CATALOGO</string>
    <string name="home">HOME</string>
    <string name="imagen_de_un_prducto">Imagen de un prducto</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="productos_destacados">Productos destacados</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="ingresa_con_huella">Ingresa con tu huella</string>
    <string name="inicio_de_sesion">Inicio de sesion</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="cambiar_foto">Cambiar foto de perfil</string>
</resources>