<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inicio.HomeActivity"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/LogoHome"
        android:layout_width="202dp"
        android:layout_height="262dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/NameAplicationHome"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:orientation="horizontal"
        android:text="@string/NombreAplicacion"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="45sp"
        android:layout_marginBottom="30dp"
         />

    <TextView
        android:id="@+id/textoHome"
        android:layout_width="327dp"
        android:layout_height="92dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/textoHome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
         />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="317dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:paddingVertical="-1dp"
        android:text="@string/BotonHome"
        android:textSize="45sp"
        app:strokeColor="@color/white"
        app:strokeWidth="1.5dp"
        android:layout_marginBottom="40dp"/>
    <TextView
        android:id="@+id/registrateHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/textoRegistrate"
        android:textColor="@color/orange"
        />
</LinearLayout>