<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/gray"
    android:id="@+id/main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/logo_registro"
                    android:layout_width="134dp"
                    android:layout_height="121dp"
                    android:layout_marginRight="40dp"
                    app:srcCompat="@drawable/logo"/>

                <TextView
                    android:id="@+id/nombre_app_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NombreAplicacion"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:textColor="@color/orange"
                    android:textSize="34sp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <TextView
                android:id="@+id/texto_registro"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/texto_registro"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"/>


            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">


                    <EditText
                        android:id="@+id/nombres_registro"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/style_edi_text"
                        android:paddingStart="15dp"
                        android:hint="Nombres"
                        android:textColorHint="@color/black"/>



                    <EditText
                        android:id="@+id/apellidos_registro"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/style_edi_text"
                        android:paddingStart="15dp"
                        android:hint="Apellidos"
                        android:textColorHint="@color/black"/>


                    <EditText
                        android:id="@+id/correo_registro"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/style_edi_text"
                        android:inputType="textEmailAddress"
                        android:paddingStart="15dp"
                        android:hint="Correo"
                        android:textColorHint="@color/black"/>


                    <EditText
                        android:id="@+id/password_registro"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/style_edi_text"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:hint="Contraseña"
                        android:textColorHint="@color/black"/>


                    <EditText
                        android:id="@+id/password2_registro"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/style_edi_text"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:hint="Repetir Contraseña"
                        android:textColorHint="@color/black"/>

                </LinearLayout>
            </LinearLayout>


            <CheckBox
                android:id="@+id/check_terminos_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:text="@string/terminos_registro"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>


            <Button
                android:id="@+id/btn_registro"
                android:layout_width="260dp"
                android:layout_height="65dp"
                android:text="@string/btn_registro"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:textSize="30dp"
                android:backgroundTint="@color/orange"
                app:strokeColor="@color/white"
                app:strokeWidth="1.5dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:text="@string/ya_tienes_cuenta_registro"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/login_registro"
                    android:text="@string/inicia_sesion_registro"
                    android:fontFamily="@font/tiro_devanagari_hindi"
                    android:textColor="@color/orange"
                    android:backgroundTint="@color/gray"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>